--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,4 +4,5 @@
   <input type="hidden" name="_method" id="hidden" value="patch">
   <p>Content: <input type="text" name="content"></p>
   <input type="submit" value="Edit Tweet">
+  <%=binding.pry%>
 </form>
