--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,6 +2,6 @@
 
 <form action="/tweets/<%=@tweet.id%>" method="post">
   <input type="hidden" name="_method" id="hidden" value="patch">
-  <p>Content: <input type="text" name="content"></p>
+  <p>Content: <input type="text" name="content" value="<%=@tweet.content%>"></p>
   <input type="submit" value="Edit Tweet">
 </form>
