--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,5 +4,5 @@
   <p>Username:</p><input type="text" name="username" id="username">
   <p>Password:</p><input type="text" name="password" id="password">
 
-  <p><input type="submit" value="submit"></p>
+  <p><button type="submit" value="submit"></p>
 </form>
