--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,7 +4,7 @@
 
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
-  <button type="button" name="Delete Tweet"></button>
+  <input type="submit" name="Delete Tweet"></button>
 </form>
 
 <form action="/tweets/<%=@tweet.id%>/edit" method="get">
