automatically backed up by learn

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -8,5 +8,5 @@
 </form>
 
 <form action="/tweets/<%=@tweet.id%>/edit" method="get">
-  <button type="button" name="Edit Tweet"></button>
+  <input type="submit" name="Edit Tweet"></input>
 </form>
