--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -4,9 +4,9 @@
 
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input type="hidden" name="_method" value="delete">
-  <input type="submit" name="Delete Tweet" value="Delete Tweet" id="Delete Tweet">
+  <input type="submit" value="Delete Tweet" id="Delete Tweet">
 </form>
 
 <form action="/tweets/<%=@tweet.id%>/edit" method="get">
-  <input type="submit" name="Edit Tweet" value="Edit Tweet">
+  <input type="submit" value="Edit Tweet">
 </form>
