automatically backed up by learn

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,6 +2,6 @@
 
   <h2>Your Tweets</h2>
 <% @user.tweets.each_with_index do |t, i| %>
-  <h3>Tweet No.<%= i %></h3>
+  <h3>Tweet No.<%= 1 + i %></h3>
   <p><%= t.content %></p>
 <% end %>
